[package]
name = "strcursor"
version = "0.3.0"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "Provides a string cursor type for seeking through a string whilst respecting grapheme cluster and code point boundaries."
repository = "https://github.com/DanielKeep/strcursor"
documentation = "https://docs.rs/strcursor/0.3.0/strcursor/index.html"
readme = "README.md"
keywords = ["str", "string", "cursor", "grapheme", "unicode"]
license = "MIT/Apache-2.0"

[dependencies]
debug_unreachable = "0.1.1"
unicode-segmentation = "1.1.0"
