[package]
name = "strcursor"
version = "0.2.6"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "Provides a string cursor type for seeking through a string whilst respecting grapheme cluster and code point boundaries."
repository = "https://github.com/DanielKeep/strcursor"
documentation = "https://docs.rs/strcursor/0.2.6/strcursor/index.html"
readme = "README.md"
keywords = ["str", "string", "cursor", "grapheme", "unicode"]
license = "MIT/Apache-2.0"

build = "build.rs"

exclude = [
    "update-docs.py",
]

[dependencies]
# 0.1.3 breaks semver
unicode-segmentation = "0.1.0, <0.1.3"

[build-dependencies]
rustc_version = "0.1.4"
